# vst2-gui-prototypes

./: .gitignore  Cargo.toml  LICENSE  README.md
linux-opengl-vst/: .gitignore  Cargo.toml  LICENSE  README.md
linux-opengl-vst/src/: gvl_plugin.rs  lib.rs
linux-opengl-vst/src/editor/: mod.rs
linux-opengl-vst/src/editor/window/: mod.rs
linux-opengl-vst/src/midi_input_processor/: mod.rs
linux-xcb-vst/: Cargo.toml  README.md
osx-opengl/: Cargo.toml  README.md
osx-opengl/src/: main.rs  view.rs
src/: editor.rs  gui_vst.rs  lib.rs  parameters.rs  square_oscillator.rs  x_handle.rs
windows-opengl/: Cargo.toml
windows-opengl-vst/: .gitignore  Cargo.toml  README.md
windows-opengl-vst/src/: gvw_plugin.rs  lib.rs
windows-opengl-vst/src/audio_engine/: mod.rs  square_oscillator.rs
windows-opengl-vst/src/editor/window/: mod.rs  pixel_format.rs  util.rs  win32_window.rs  window_class.rs
windows-opengl-vst/src/parameters/: atomic_float.rs  mod.rs
windows-opengl/src/: main.rs  pixel_format.rs  util.rs  window.rs
xcb-raw/: Cargo.toml
xcb-raw/src/: editor.rs  lib.rs  parameters.rs
