[package]
name = "gui-vst"
version = "0.1.0"
authors = ["Charles Saracco <crsaracco@gmail.com>"]
edition = "2018"

[dependencies]
vst = { path = "/home/crs/git/github/rust-vst/" }
log = "0.4"
simplelog = "^0.5.0"

[dependencies.xcb]
version = "0.8"
features = ["thread"]

[lib]
name = "guivst"
crate-type = ["dylib"]
# TODO: cdylib insteadl of dylib?