[package]
name = "windows-opengl-vst"
version = "0.1.0"
authors = ["Charles Saracco <crsaracco@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/crsaracco/rust-vst", branch = "gvl-development" }
log = "0.4"
simplelog = "^0.5.0" # TODO: get exact version
winapi = "0.2.*" # TODO: get exact version
user32-sys = "0.2.*" # TODO: get exact version
kernel32-sys = "0.2.*" # TODO: get exact version
gdi32-sys = "0.2.0"
opengl32-sys = "*" # TODO: get exact version
gl = "*" # TODO: get exact version
rand = "*" # TODO: get exact version

[lib]
name = "gvw"
crate-type = ["cdylib"]
